# bones-day

./: .gitattributes  .gitignore  Cargo.toml  README.md  TODO.md
api/: access  bearer  key  secret
src/: main.rs
templates/: bones.html
