[package]
name = "bones-day"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10" # web framework
chrono = "0.4.19"
chrono-tz = "0.6.0"
egg-mode = "0.16.0" # twitter api
futures = "0.3.17"
serde = "1.0.130"
tera = "1.15.0"
